# lab-tracker

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  environment.yml  eslint.config.mjs  idea.md  manage.py  package-lock.json  package.json  pyproject.toml  vitest.config.mjs
.beads/: .gitignore  config.yaml  issues.jsonl  metadata.json
.github/workflows/: ci.yml
agent-skills/lab-tracker-coding/: SKILL.md
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_core_entities.py  0003_entity_tag_suggestions.py  0004_claims_visualizations.py  0005_projects_created_by.py  0006_dataset_files.py  0007_dataset_reviews.py  0008_project_review_policy.py  0009_acquisition_outputs.py  0010_query_indexes.py  0011_note_raw_asset_fields.py  0012_manifest_and_note_metadata.py  0013_retained_v1_cleanup.py  0014_graph_draft_review.py
core/: admin.py  models.py  serializers.py  tests.py  views.py
core/migrations/: 0002_remove_dataset_from_claimevidence.py
deploy/: shared-metadata.env.example
docs/: PROJECT_SPEC.md  coding-agent-support.md  internal-boundaries.md  lab-tracker-mcp-skills.md  mcp.md  retained-v1-surface.md  shared-deployment.md  windows-fresh-clone.md
docs/runs/: 20260115-223127-85286445.md
lab_tracker/: asgi.py  settings.py  urls.py
scripts/: build-frontend.mjs  chatgpt-mcp-tunnel.sh
skills/lab-tracker/: SKILL.md
src/fastapi/: __init__.py  testclient.py
src/lab_tracker/: __init__.py  acquisition_watcher.py  api.py  api_routes.py  app.py  asgi.py  auth.py  config.py  db.py  db_models.py  dependencies.py  dolt_mirror.py  errors.py  fastapi_compat.py  file_storage.py  graph_drafting.py  logging.py  mcp_server.py  models.py  note_storage.py  provenance.py  reindex.py  repository.py  request_context.py  review_ui.py  schemas.py  settings.py  sqlalchemy_mappers.py  sqlalchemy_repository.py  urls.py  wsgi.py
src/lab_tracker/core/: admin.py  apps.py  models.py  urls.py  views.py
src/lab_tracker/frontend/: app.js  app.js.map  index.html  styles.css
tests/: __init__.py  conftest.py  test_acquisition_outputs.py  test_analysis_claims_visualizations.py  test_auth_routes.py  test_chromadb_search_backend.py  test_config.py  test_core_api.py  test_dataset_file_routes.py  test_dataset_review_routes.py  test_db_wiring.py  test_dolt_mirror.py  test_embedding_providers.py  test_file_storage_backend.py  test_frontend.py  test_graph_drafts.py  test_health.py  test_http_db_integration.py  test_llm_question_extraction_backend.py  test_mcp_server.py  test_migrations.py  test_models.py  test_note_storage.py  test_observability.py  test_ocr_backends.py  test_persistence_flows.py  test_provenance.py  test_provenance_routes.py  test_review_ui.py  test_search_and_extraction_infrastructure.py  test_search_routes.py  test_shared_deployment.py  test_sqlalchemy_mappers.py  test_sqlalchemy_repository.py
(+108 files in other folders)
