[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lab-tracker"
version = "0.1.0"
description = "Lab tracker project"
requires-python = ">=3.10"
dependencies = [
  "alembic",
  "fastapi",
  "pydantic-settings",
  "sqlalchemy>=2.0",
  "uvicorn",
]

[project.optional-dependencies]
test = [
  "httpx",
  "pytest",
]
lint = [
  "ruff",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["lab_tracker", "lab_tracker.services"]

[tool.setuptools.package-data]
lab_tracker = ["frontend/*"]

[tool.codex_orchestrator]
env = "lab_tracker"
allow_env_creation = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F"]
