[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lab-tracker"
version = "0.1.0"
description = "Lab tracker project"
requires-python = ">=3.10"
dependencies = [
  "alembic",
  "fastapi",
  "pydantic-settings",
  "python-multipart",
  "sqlalchemy>=2.0",
  "uvicorn",
]

[project.optional-dependencies]
mcp = [
  "mcp>=1.0",
]
test = [
  "httpx",
  "pytest",
]
lint = [
  "ruff",
]

[project.scripts]
lab-tracker-mcp = "lab_tracker.mcp_server:main"
lab-tracker-coding-mcp = "lab_tracker.mcp_server:coding_main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["lab_tracker", "lab_tracker.*"]

[tool.setuptools.package-data]
lab_tracker = [
  "frontend/index.html",
  "frontend/app.js",
  "frontend/styles.css",
  "mcp_app/*.html",
]

[tool.codex_orchestrator]
env = "lab_tracker"
allow_env_creation = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F"]
