[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lab-tracker"
version = "0.1.0"
description = "Lab tracker project"
requires-python = ">=3.10"
dependencies = [
  "alembic",
  "fastapi",
  "httpx>=0.27.1",
  "mcp>=1.27,<2",
  "psycopg[binary]>=3.1",
  "pydantic-settings",
  "python-multipart",
  "sqlalchemy>=2.0",
  "uvicorn",
]

[project.optional-dependencies]
test = [
  "pytest",
]
lint = [
  "ruff",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["lab_tracker", "lab_tracker.*"]

[tool.setuptools.package-data]
lab_tracker = [
  "frontend/index.html",
  "frontend/app.js",
  "frontend/styles.css",
]

[tool.codex_orchestrator]
env = "lab_tracker"
allow_env_creation = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F"]
